# altpaca

./: .gitignore  README.md  altpaca.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_altpaca.py
