[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "altpaca"
version = "0.1.1"
description = "Move Claude Desktop sessions between account partitions."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Vladimir Chebotarev", email = "vladimir.chebotarev@gmail.com" }]
keywords = ["claude", "claude-code", "sessions", "cli"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/excitoon/altpaca"
Issues = "https://github.com/excitoon/altpaca/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "build>=1"]

[project.scripts]
altpaca = "altpaca:main"

[tool.setuptools]
py-modules = ["altpaca"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
